Update user service and notification service with new features and configurations
- Updated email alert configuration in alertmanager.yml.
- Removed unnecessary restart policies from docker-compose.yml for various services.
- Deleted obsolete log files from user-service.
- Added new entities (User, Role, Permission) and events (PasswordResetEvent, UserActivationEvent) in common module.
- Implemented email service for sending activation and password reset emails in notification service.
- Configured Kafka topics for user activation and password reset events.
- Enhanced user service with activation and password reset functionalities, including command and event handling.
- Updated application configurations for improved service integration and logging.